modified faq questions shape to capsules

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1531,6 +1531,21 @@ video {
   padding-right: 32%;
 }
 
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-9 {
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+}
+
 .pt-1 {
   padding-top: 0.25rem;
 }
