--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1446,6 +1446,21 @@ video {
   padding-bottom: 4px;
 }
 
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pt-1 {
   padding-top: 0.25rem;
 }
@@ -1580,6 +1595,10 @@ video {
 
 .pb-7 {
   padding-bottom: 1.75rem;
+}
+
+.pb-0 {
+  padding-bottom: 0px;
 }
 
 .text-left {
