--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2360,6 +2360,14 @@ video {
     padding-bottom: 0px;
   }
 
+  .md\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
+  .md\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
