--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -768,6 +768,10 @@ video {
   height: 0.5rem;
 }
 
+.h-\[46\.49vw\] {
+  height: 46.49vw;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -796,24 +800,8 @@ video {
   height: 5rem;
 }
 
-.h-\[10\.3311rem\] {
-  height: 10.3311rem;
-}
-
-.h-\[90vw\] {
-  height: 90vw;
-}
-
-.h-\[46\.49vw\] {
-  height: 46.49vw;
-}
-
 .max-h-\[85vh\] {
   max-height: 85vh;
-}
-
-.max-h-\[10\.3311rem\] {
-  max-height: 10.3311rem;
 }
 
 .min-h-\[4\.5rem\] {
@@ -824,12 +812,16 @@ video {
   width: 100vw;
 }
 
+.w-14 {
+  width: 3.5rem;
+}
+
 .w-5 {
   width: 1.25rem;
 }
 
-.w-\[3\.4rem\] {
-  width: 3.4rem;
+.w-\[3\.5rem\] {
+  width: 3.5rem;
 }
 
 .w-\[20px\] {
@@ -850,6 +842,10 @@ video {
 
 .w-24 {
   width: 6rem;
+}
+
+.w-\[90vw\] {
+  width: 90vw;
 }
 
 .w-6 {
@@ -900,30 +896,6 @@ video {
   width: 75%;
 }
 
-.w-14 {
-  width: 3.5rem;
-}
-
-.w-\[20rem\] {
-  width: 20rem;
-}
-
-.w-\[20vw\] {
-  width: 20vw;
-}
-
-.w-\[2vw\] {
-  width: 2vw;
-}
-
-.w-\[80vw\] {
-  width: 80vw;
-}
-
-.w-\[90vw\] {
-  width: 90vw;
-}
-
 .max-w-full {
   max-width: 100%;
 }
@@ -934,10 +906,6 @@ video {
 
 .max-w-\[100\%\] {
   max-width: 100%;
-}
-
-.max-w-\[20rem\] {
-  max-width: 20rem;
 }
 
 .-translate-y-2\/4 {
@@ -1248,6 +1216,11 @@ video {
   border-color: transparent;
 }
 
+.border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgba(75, 85, 99, var(--tw-border-opacity));
+}
+
 .border-logo-purple {
   --tw-border-opacity: 1;
   border-color: rgba(182, 52, 233, var(--tw-border-opacity));
@@ -1260,7 +1233,7 @@ video {
 
 .border-text-purple {
   --tw-border-opacity: 1;
-  border-color: rgba(200, 61, 255, var(--tw-border-opacity));
+  border-color: rgba(156, 102, 255, var(--tw-border-opacity));
 }
 
 .border-gray-400 {
@@ -1275,12 +1248,12 @@ video {
 
 .border-r-text-purple {
   --tw-border-opacity: 1;
-  border-right-color: rgba(200, 61, 255, var(--tw-border-opacity));
+  border-right-color: rgba(156, 102, 255, var(--tw-border-opacity));
 }
 
 .border-t-text-purple {
   --tw-border-opacity: 1;
-  border-top-color: rgba(200, 61, 255, var(--tw-border-opacity));
+  border-top-color: rgba(156, 102, 255, var(--tw-border-opacity));
 }
 
 .bg-gray-100 {
@@ -1369,7 +1342,7 @@ video {
 }
 
 .to-text-purple {
-  --tw-gradient-to: #c83dff;
+  --tw-gradient-to: #9c66ff;
 }
 
 .to-\[\#C33764\] {
@@ -1423,9 +1396,9 @@ video {
   padding-bottom: 1rem;
 }
 
-.px-14 {
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 .py-\[4px\] {
@@ -1476,11 +1449,6 @@ video {
 .px-\[32\%\] {
   padding-left: 32%;
   padding-right: 32%;
-}
-
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
 }
 
 .pt-1 {
@@ -1644,9 +1612,9 @@ video {
   font-size: 48px;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .text-\[0\.75rem\] {
@@ -1656,6 +1624,11 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-4xl {
@@ -1671,11 +1644,6 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
 }
 
 .font-semibold {
@@ -1726,6 +1694,11 @@ video {
   color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
 
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+
 .text-\[\#E23B8B\] {
   --tw-text-opacity: 1;
   color: rgba(226, 59, 139, var(--tw-text-opacity));
@@ -1733,7 +1706,7 @@ video {
 
 .text-text-purple {
   --tw-text-opacity: 1;
-  color: rgba(200, 61, 255, var(--tw-text-opacity));
+  color: rgba(156, 102, 255, var(--tw-text-opacity));
 }
 
 .text-gold {
@@ -1869,10 +1842,6 @@ video {
   transition-duration: 100ms;
 }
 
-.duration-1000 {
-  transition-duration: 1000ms;
-}
-
 .duration-\[2000ms\] {
   transition-duration: 2000ms;
 }
@@ -1887,10 +1856,6 @@ video {
 
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
-
-.ease-in {
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
 .hover\:scale-125:hover {
@@ -1922,7 +1887,7 @@ video {
 
 .hover\:text-text-purple:hover {
   --tw-text-opacity: 1;
-  color: rgba(200, 61, 255, var(--tw-text-opacity));
+  color: rgba(156, 102, 255, var(--tw-text-opacity));
 }
 
 .active\:text-logo-purple-dark:active {
@@ -1942,11 +1907,7 @@ video {
 
 .group:hover .group-hover\:text-text-purple {
   --tw-text-opacity: 1;
-  color: rgba(200, 61, 255, var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:duration-700 {
-  transition-duration: 700ms;
+  color: rgba(156, 102, 255, var(--tw-text-opacity));
 }
 
 .dark .dark\:block {
@@ -1957,14 +1918,19 @@ video {
   display: none;
 }
 
-.dark .dark\:translate-x-\[1\.65rem\] {
-  --tw-translate-x: 1.65rem;
+.dark .dark\:translate-x-\[1\.73rem\] {
+  --tw-translate-x: 1.73rem;
   transform: var(--tw-transform);
 }
 
 .dark .dark\:divide-gray-600 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
   border-color: rgba(75, 85, 99, var(--tw-divide-opacity));
+}
+
+.dark .dark\:border-\[\#414141\] {
+  --tw-border-opacity: 1;
+  border-color: rgba(65, 65, 65, var(--tw-border-opacity));
 }
 
 .dark .dark\:border-transparent {
@@ -1988,12 +1954,12 @@ video {
 
 .dark .dark\:border-r-text-purple {
   --tw-border-opacity: 1;
-  border-right-color: rgba(200, 61, 255, var(--tw-border-opacity));
+  border-right-color: rgba(156, 102, 255, var(--tw-border-opacity));
 }
 
 .dark .dark\:border-t-text-purple {
   --tw-border-opacity: 1;
-  border-top-color: rgba(200, 61, 255, var(--tw-border-opacity));
+  border-top-color: rgba(156, 102, 255, var(--tw-border-opacity));
 }
 
 .dark .dark\:bg-body {
@@ -2006,9 +1972,9 @@ video {
   background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-gray-600 {
+.dark .dark\:bg-\[\#272727\] {
   --tw-bg-opacity: 1;
-  background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+  background-color: rgba(39, 39, 39, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-\[\#1E1E1E\] {
@@ -2102,7 +2068,7 @@ video {
 
 .dark .dark\:text-text-purple {
   --tw-text-opacity: 1;
-  color: rgba(200, 61, 255, var(--tw-text-opacity));
+  color: rgba(156, 102, 255, var(--tw-text-opacity));
 }
 
 .dark .dark\:text-\[\#ADAEAD\] {
@@ -2149,7 +2115,7 @@ video {
 
 .dark .dark\:hover\:text-text-purple:hover {
   --tw-text-opacity: 1;
-  color: rgba(200, 61, 255, var(--tw-text-opacity));
+  color: rgba(156, 102, 255, var(--tw-text-opacity));
 }
 
 .dark .group:hover .dark\:group-hover\:text-gray-200 {
@@ -2183,40 +2149,20 @@ video {
     height: 4rem;
   }
 
-  .md\:h-7 {
-    height: 1.75rem;
-  }
-
-  .md\:h-\[36rem\] {
-    height: 36rem;
-  }
-
-  .md\:h-\[6rem\] {
-    height: 6rem;
-  }
-
-  .md\:h-\[36\.5rem\] {
-    height: 36.5rem;
-  }
-
-  .md\:h-\[41\.3244vh\] {
-    height: 41.3244vh;
-  }
-
   .md\:h-\[41\.3244vw\] {
     height: 41.3244vw;
   }
 
-  .md\:max-h-\[\] {
-    max-height: ;
+  .md\:h-7 {
+    height: 1.75rem;
   }
 
-  .md\:max-h-\[36rem\] {
-    max-height: 36rem;
+  .md\:w-16 {
+    width: 4rem;
   }
 
-  .md\:max-h-\[36\.5rem\] {
-    max-height: 36.5rem;
+  .md\:w-\[80vw\] {
+    width: 80vw;
   }
 
   .md\:w-\[35rem\] {
@@ -2235,58 +2181,17 @@ video {
     width: auto;
   }
 
-  .md\:w-16 {
-    width: 4rem;
-  }
-
-  .md\:w-\[70rem\] {
-    width: 70rem;
-  }
-
-  .md\:w-\[10\%\] {
-    width: 10%;
-  }
-
-  .md\:w-\[100\%\] {
-    width: 100%;
-  }
-
-  .md\:w-\[80vw\] {
-    width: 80vw;
-  }
-
-  .md\:w-\[10vw\] {
-    width: 10vw;
-  }
-
-  .md\:w-\[170vw\] {
-    width: 170vw;
-  }
-
-  .md\:w-\[70vw\] {
-    width: 70vw;
-  }
-
   .md\:max-w-7xl {
     max-width: 80rem;
   }
 
-  .md\:max-w-\[70rem\] {
-    max-width: 70rem;
-  }
-
-  .md\:translate-y-14 {
-    --tw-translate-y: 3.5rem;
+  .md\:translate-y-8 {
+    --tw-translate-y: 2rem;
     transform: var(--tw-transform);
   }
 
   .md\:translate-y-0 {
     --tw-translate-y: 0px;
-    transform: var(--tw-transform);
-  }
-
-  .md\:translate-y-8 {
-    --tw-translate-y: 2rem;
     transform: var(--tw-transform);
   }
 
@@ -2348,6 +2253,10 @@ video {
     padding-top: 1rem;
   }
 
+  .md\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
   .md\:pt-0 {
     padding-top: 0px;
   }
@@ -2358,14 +2267,6 @@ video {
 
   .md\:pb-0 {
     padding-bottom: 0px;
-  }
-
-  .md\:pt-10 {
-    padding-top: 2.5rem;
-  }
-
-  .md\:pt-5 {
-    padding-top: 1.25rem;
   }
 
   .md\:text-xl {
@@ -2382,34 +2283,22 @@ video {
     line-height: 2rem;
   }
 
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
   .md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
 
-  .md\:opacity-0 {
-    opacity: 0;
-  }
-
-  .md\:opacity-100 {
-    opacity: 1;
-  }
-
-  .md\:opacity-50 {
-    opacity: 0.5;
-  }
-
-  .md\:opacity-25 {
-    opacity: 0.25;
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .md\:opacity-20 {
     opacity: 0.2;
+  }
+
+  .md\:opacity-100 {
+    opacity: 1;
   }
 }
 
