--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* removes highlight of button press on mobile */
+body {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
