--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1584,11 +1584,11 @@ video {
 }
 
 .font-sourceSansPro {
-  font-family: 'Source Sans Pro', Calibri, sans-serif;;
+  font-family: 'Source Sans Pro', Arial, sans-serif;;
 }
 
 .font-openSans {
-  font-family: 'Open Sans', Calibri, sans-serif;
+  font-family: 'Open Sans', Arial, sans-serif;
 }
 
 .text-\[1\.05rem\] {
