--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -640,14 +640,6 @@ video {
   left: 0.25rem;
 }
 
-.right-\[-2\.125rem\] {
-  right: -2.125rem;
-}
-
-.bottom-\[0\.2rem\] {
-  bottom: 0.2rem;
-}
-
 .top-5 {
   top: 1.25rem;
 }
@@ -700,12 +692,21 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
 
 .mb-10 {
   margin-bottom: 2.5rem;
+}
+
+.mt-auto {
+  margin-top: auto;
 }
 
 .block {
@@ -840,10 +841,6 @@ video {
   width: 100%;
 }
 
-.w-24 {
-  width: 6rem;
-}
-
 .w-\[90vw\] {
   width: 90vw;
 }
@@ -876,20 +873,20 @@ video {
   width: 0.75rem;
 }
 
-.w-\[85\%\] {
-  width: 85%;
-}
-
-.w-9 {
-  width: 2.25rem;
-}
-
 .w-full {
   width: 100%;
 }
 
 .w-\[75\%\] {
   width: 75%;
+}
+
+.w-\[85\%\] {
+  width: 85%;
+}
+
+.w-9 {
+  width: 2.25rem;
 }
 
 .max-w-full {
@@ -1282,11 +1279,6 @@ video {
   background-color: rgba(229, 226, 227, var(--tw-bg-opacity));
 }
 
-.bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
-}
-
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\] {
   background-color: rgba(0,0,0,0.8);
 }
@@ -1354,12 +1346,12 @@ video {
   fill: currentColor;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
 .p-3 {
   padding: 0.75rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-6 {
@@ -1397,11 +1389,6 @@ video {
   padding-right: 3rem;
 }
 
-.py-\[4px\] {
-  padding-top: 4px;
-  padding-bottom: 4px;
-}
-
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -1435,11 +1422,6 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.py-\[2px\] {
-  padding-top: 2px;
-  padding-bottom: 2px;
 }
 
 .px-\[32\%\] {
@@ -1551,14 +1533,6 @@ video {
   padding-top: 3.5rem;
 }
 
-.pt-\[0\.10rem\] {
-  padding-top: 0.10rem;
-}
-
-.pl-9 {
-  padding-left: 2.25rem;
-}
-
 .pt-20 {
   padding-top: 5rem;
 }
@@ -1569,6 +1543,14 @@ video {
 
 .pl-5 {
   padding-left: 1.25rem;
+}
+
+.pt-\[0\.10rem\] {
+  padding-top: 0.10rem;
+}
+
+.pl-9 {
+  padding-left: 2.25rem;
 }
 
 .pb-7 {
@@ -1607,10 +1589,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-\[0\.75rem\] {
-  font-size: 0.75rem;
 }
 
 .text-3xl {
@@ -1720,11 +1698,6 @@ video {
   color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
 
-.text-gray-50 {
-  --tw-text-opacity: 1;
-  color: rgba(249, 250, 251, var(--tw-text-opacity));
-}
-
 .text-gray-100 {
   --tw-text-opacity: 1;
   color: rgba(243, 244, 246, var(--tw-text-opacity));
@@ -1773,13 +1746,13 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1862,6 +1835,10 @@ body {
   font-display: optional;
 }
 
+.hover\:flex:hover {
+  display: flex;
+}
+
 .hover\:scale-125:hover {
   --tw-scale-x: 1.25;
   --tw-scale-y: 1.25;
@@ -1897,6 +1874,10 @@ body {
 .active\:text-logo-purple-dark:active {
   --tw-text-opacity: 1;
   color: rgba(149, 42, 191, var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:flex {
+  display: flex;
 }
 
 .group:hover .group-hover\:text-gray-600 {
@@ -1996,11 +1977,6 @@ body {
   background-color: rgba(41, 39, 41, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-\[\#1a181a\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(26, 24, 26, var(--tw-bg-opacity));
-}
-
 .dark .dark\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\] {
   background-color: rgba(0,0,0,0.8);
 }
@@ -2020,11 +1996,6 @@ body {
   background-color: rgba(26, 26, 26, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-\[\#222222\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(34, 34, 34, var(--tw-bg-opacity));
-}
-
 .dark .dark\:bg-\[\#2b2b2b\] {
   --tw-bg-opacity: 1;
   background-color: rgba(43, 43, 43, var(--tw-bg-opacity));
@@ -2035,9 +2006,9 @@ body {
   background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-\[\#312f31\] {
+.dark .dark\:bg-\[\#222222\] {
   --tw-bg-opacity: 1;
-  background-color: rgba(49, 47, 49, var(--tw-bg-opacity));
+  background-color: rgba(34, 34, 34, var(--tw-bg-opacity));
 }
 
 .dark .dark\:text-gray-300 {
@@ -2127,28 +2098,24 @@ body {
   color: rgba(152, 97, 255, var(--tw-text-opacity));
 }
 
+.dark .group:hover .dark\:group-hover\:hidden {
+  display: none;
+}
+
 .dark .group:hover .dark\:group-hover\:text-gray-200 {
   --tw-text-opacity: 1;
   color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 
+.dark .group:hover .dark\:group-hover\:opacity-0 {
+  opacity: 0;
+}
+
+.dark .group:hover .dark\:group-hover\:opacity-100 {
+  opacity: 1;
+}
+
 @media (min-width: 768px) {
-  .md\:right-\[-0\.5rem\] {
-    right: -0.5rem;
-  }
-
-  .md\:bottom-\[0\.7rem\] {
-    bottom: 0.7rem;
-  }
-
-  .md\:right-\[-1\.4rem\] {
-    right: -1.4rem;
-  }
-
-  .md\:bottom-\[0\.45rem\] {
-    bottom: 0.45rem;
-  }
-
   .md\:mx-16 {
     margin-left: 4rem;
     margin-right: 4rem;
