--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -760,6 +760,14 @@ video {
   height: 0.5rem;
 }
 
+.h-\[18px\] {
+  height: 18px;
+}
+
+.h-\[22px\] {
+  height: 22px;
+}
+
 .h-\[46\.49vw\] {
   height: 46.49vw;
 }
@@ -790,46 +798,6 @@ video {
 
 .h-20 {
   height: 5rem;
-}
-
-.h-\[18px\] {
-  height: 18px;
-}
-
-.h-\[22px\] {
-  height: 22px;
-}
-
-.h-\[23px\] {
-  height: 23px;
-}
-
-.h-\[26px\] {
-  height: 26px;
-}
-
-.h-\[30px\] {
-  height: 30px;
-}
-
-.h-\[40px\] {
-  height: 40px;
-}
-
-.h-\[35px\] {
-  height: 35px;
-}
-
-.h-\[32px\] {
-  height: 32px;
-}
-
-.h-\[25px\] {
-  height: 25px;
-}
-
-.h-\[24px\] {
-  height: 24px;
 }
 
 .max-h-\[85vh\] {
@@ -870,6 +838,14 @@ video {
 
 .w-\[100\%\] {
   width: 100%;
+}
+
+.w-\[18px\] {
+  width: 18px;
+}
+
+.w-\[22px\] {
+  width: 22px;
 }
 
 .w-\[90vw\] {
@@ -920,62 +896,6 @@ video {
   width: 2.25rem;
 }
 
-.w-\[18px\] {
-  width: 18px;
-}
-
-.w-\[22px\] {
-  width: 22px;
-}
-
-.w-\[23px\] {
-  width: 23px;
-}
-
-.w-\[26px\] {
-  width: 26px;
-}
-
-.w-\[30px\] {
-  width: 30px;
-}
-
-.w-\[40px\] {
-  width: 40px;
-}
-
-.w-\[35px\] {
-  width: 35px;
-}
-
-.w-\[32px\] {
-  width: 32px;
-}
-
-.w-\[25px\] {
-  width: 25px;
-}
-
-.w-\[24px\] {
-  width: 24px;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-56 {
-  width: 14rem;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
 .max-w-full {
   max-width: 100%;
 }
@@ -1014,21 +934,15 @@ video {
   transform: var(--tw-transform);
 }
 
-.scale-125 {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: var(--tw-transform);
-}
-
-.scale-110 {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: var(--tw-transform);
-}
-
 .scale-150 {
   --tw-scale-x: 1.5;
   --tw-scale-y: 1.5;
+  transform: var(--tw-transform);
+}
+
+.scale-125 {
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
   transform: var(--tw-transform);
 }
 
@@ -1209,6 +1123,18 @@ video {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1237,18 +1163,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(3.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(3.5rem * var(--tw-space-y-reverse));
-}
-
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .overflow-auto {
@@ -1348,6 +1262,11 @@ video {
 .border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+}
+
+.border-menu-pink {
+  --tw-border-opacity: 1;
+  border-color: rgba(226, 59, 139, var(--tw-border-opacity));
 }
 
 .border-r-text-purple {
@@ -1535,21 +1454,6 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.px-\[32\%\] {
-  padding-left: 32%;
-  padding-right: 32%;
-}
-
-.px-9 {
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
 .px-20 {
   padding-left: 5rem;
   padding-right: 5rem;
@@ -1563,6 +1467,16 @@ video {
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
+}
+
+.px-\[32\%\] {
+  padding-left: 32%;
+  padding-right: 32%;
+}
+
+.px-9 {
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
 }
 
 .pt-1 {
@@ -1611,6 +1525,10 @@ video {
 
 .pt-8 {
   padding-top: 2rem;
+}
+
+.pt-\[0\.1rem\] {
+  padding-top: 0.1rem;
 }
 
 .pt-4 {
@@ -1691,10 +1609,6 @@ video {
 
 .pb-7 {
   padding-bottom: 1.75rem;
-}
-
-.pt-\[0\.1rem\] {
-  padding-top: 0.1rem;
 }
 
 .text-left {
@@ -1873,14 +1787,9 @@ video {
   color: rgba(252, 231, 243, var(--tw-text-opacity));
 }
 
-.text-\[\#0071c5\] {
+.text-menu-pink {
   --tw-text-opacity: 1;
-  color: rgba(0, 113, 197, var(--tw-text-opacity));
-}
-
-.text-\[\#494949\] {
-  --tw-text-opacity: 1;
-  color: rgba(73, 73, 73, var(--tw-text-opacity));
+  color: rgba(226, 59, 139, var(--tw-text-opacity));
 }
 
 .underline {
@@ -1962,10 +1871,6 @@ video {
   transition-duration: 100ms;
 }
 
-.duration-700 {
-  transition-duration: 700ms;
-}
-
 .duration-\[2000ms\] {
   transition-duration: 2000ms;
 }
@@ -2006,6 +1911,11 @@ body {
   border-color: rgba(226, 59, 139, var(--tw-border-opacity));
 }
 
+.hover\:border-menu-pink:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(226, 59, 139, var(--tw-border-opacity));
+}
+
 .hover\:bg-gray-900:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
@@ -2019,14 +1929,6 @@ body {
 .hover\:text-text-purple:hover {
   --tw-text-opacity: 1;
   color: rgba(152, 97, 255, var(--tw-text-opacity));
-}
-
-.hover\:opacity-0:hover {
-  opacity: 0;
-}
-
-.hover\:opacity-100:hover {
-  opacity: 1;
 }
 
 .active\:text-logo-purple-dark:active {
@@ -2219,6 +2121,11 @@ body {
   color: rgba(220, 38, 38, var(--tw-text-opacity));
 }
 
+.dark .dark\:text-menu-pink {
+  --tw-text-opacity: 1;
+  color: rgba(226, 59, 139, var(--tw-text-opacity));
+}
+
 .dark .dark\:opacity-100 {
   opacity: 1;
 }
@@ -2233,6 +2140,11 @@ body {
 }
 
 .dark .dark\:hover\:border-\[\#E23B8B\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(226, 59, 139, var(--tw-border-opacity));
+}
+
+.dark .dark\:hover\:border-menu-pink:hover {
   --tw-border-opacity: 1;
   border-color: rgba(226, 59, 139, var(--tw-border-opacity));
 }
